--- a/public/style.css
+++ b/public/style.css
@@ -4,7 +4,7 @@ body {
     background-color: #f4f4f4;
 }
 
-#chat-container {
+#usernameContainer, #chat-container {
     width: 300px;
     margin: 50px auto;
     padding: 10px;
